Significant improvements made to the homepage. Particles.js issue was resolved to allow for detection on window vs canvas. Styling changes including font-family, font-size, and overflow-x set to hidden were made.

--- a/style.css
+++ b/style.css
@@ -3,22 +3,45 @@ body {
     margin: 0px;
     padding: 0;
     height: 100vh;
+    overflow-x: hidden;
 }
 
 #particles-js {
     width: 100%;
     height: 100%;
-    background-color: #437993;
+    background-color: black;
     /*background-image: url('');*/
     background-size: cover;
     background-position: 50% 50%;
     background-repeat: no-repeat;
     position: absolute;
-}
+    z-index: -1;
+} 
 
 canvas {
-    display: block;
-    vertical-align: bottom;
+    width: 100%;
+    height: 100%;
+    z-index: 2;
+}
+
+#homecontainer {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    color: white;
+    width: 100vw;
+    height: 100vh;
+    margin: 0%;
+    /*  ===== bg color is for testing ===== */
+    /* background-color: blue; */
+    font-size: 15pt;
+    font-family: 'Raleway';
+}
+
+#innerhome {
+    padding: 0%;
+    text-align: center;
 }
 
 #homebutton {
